apps/landing/fleet/test/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: uniia-landing
spec:
  replicas: 1
  selector:
    matchLabels:
      app: uniia-landing
  template:
    metadata:
      labels:
        app: uniia-landing
    spec:
      containers:
      - name: uniia-landing
        image: ghcr.io/uniia-com-ua/uniia-landing:latest-rc
        ports:
        - containerPort: 3000
        resources:
          limits:
            cpu: "500m"
            memory: "512Mi"
          requests:
            cpu: "200m"
            memory: "256Mi"
        env:
        - name: NODE_ENV
          value: "test"
        readinessProbe:
          httpGet:
            path: /
            port: 3000
          initialDelaySeconds: 10
          periodSeconds: 5
        livenessProbe:
          httpGet:
            path: /
            port: 3000
          initialDelaySeconds: 15
          periodSeconds: 10
