apps/landing/fleet/test/patch-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: uniia-landing
spec:
  replicas: 1
  template:
    spec:
      containers:
      - name: uniia-landing
        resources:
          limits:
            cpu: "500m"
            memory: "512Mi"
          requests:
            cpu: "200m"
            memory: "256Mi"
        env:
        - name: NODE_ENV
          value: "test"
